corpus/basic.txt
============================================
comment
============================================

; just comment

----

(source_file (comment))

============================================
empty circuit
============================================

circuit C1 :

----

(source_file
  (circuit (id)))

============================================
empty module
============================================

circuit C1 :
  module M1 :

----

(source_file
  (circuit (id)
    (module (id))))

============================================
module with ios
============================================

circuit C1 :
  module M1 :
    input clk : Clock
    input addr : UInt<11>
    output data : UInt<32>

----

(source_file
  (circuit (id)
    (module (id)
      (port (dir) (id) (type))
      (port (dir) (id) (type (intLit (UnsignedInt))))
      (port (dir) (id) (type (intLit (UnsignedInt)))))))
